--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -46,7 +46,7 @@
 
 	#banner,
 	.wrapper.style4 {
-		background-image: url("../assets/images/capecod.jpg");
+		background-image: url("../../assets/images/capecod.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -101,7 +101,7 @@
 /* Main */
 
 	#main > header {
-		background-image: url("../assets/images/capecod.jpg");
+		background-image: url("../../assets/images/capecod.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
