--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div id="page-wrapper">
 
 	<!-- Header -->
-	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
+	<header id="header" >
 		<h1><a href="/">{{ site.title }}</a></h1>
 		<nav id="nav">
 			<ul>
