--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,9 +4,9 @@
 		<h2>{{ site.title }}</h2>
 		<p>{{ site.description }}</p>
 		<ul class="actions">
-			<li><a href="/Page1.html" class="button special">Page1</a></li>
-			<li><a href="/Page2.html" class="button special">Page2</a></li>
-			<li><a href="/Page3.html" class="button special">Page3</a></li>
+			<li><a href="/Page1.html" class="button special">Learning & Resources</a></li>
+			<li><a href="/Page2.html" class="button special">Blog</a></li>
+			<li><a href="/Page3.html" class="button special">Publications</a></li>
 		</ul>
 	</div>
 	<a href="#one" class="more scrolly">Learn More</a>
