--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,12 @@
 	<div class="inner">
 		<header class="major">
 			<h2>ABOUT ME</h2>
-			<p>about me </p>
+			<p>As a data scientist, I'm excited about enabling data-driven decision making 
+				for society's toughest challenges. This website is a collection of my 
+				favorite resources, as well as some of my thoughts on data 
+				and computing. You'll find general resources, as well as some geared for
+				climate science and oceanography specifically. 
+			</p>
 		</header>
 		<!--<ul class="icons major">-->
 			<!--<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span>-->
