--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -1,11 +1,8 @@
 <!-- Four -->
 <section id="four" class="wrapper style2 special">
     <div class="inner">
-        <header class="major">
-            <h2>Section 4</h2>
-        </header>
 		<p>
-			text
+		Banner and photos from https://oceancolor.gsfc.nasa.gov/gallery/
 		</p>
     </div>
 </section>
