--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -2,7 +2,7 @@
 <section id="four" class="wrapper style2 special">
     <div class="inner">
 		<p>
-		Banner and photos from https://oceancolor.gsfc.nasa.gov/gallery/
+		Banner photo: https://oceancolor.gsfc.nasa.gov/gallery/
 		</p>
     </div>
 </section>
