--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -2,8 +2,9 @@
 <section id="four" class="wrapper style2 special">
     <div class="inner">
 		<p>
-		Banner photo: https://oceancolor.gsfc.nasa.gov/gallery/
-		</p>
+		Banner photo: <li><a href="https://oceancolor.gsfc.nasa.gov/gallery/">Ocean Color Gallery</a></li>
+	    	</p>
     </div>
 </section>
 
+		
