--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -2,7 +2,7 @@
 <section id="four" class="wrapper style2 special">
     <div class="inner">
 		<p>
-		Banner photo: <li><a href="https://oceancolor.gsfc.nasa.gov/gallery/">Ocean Color Gallery</a></li>
+		Banner photo from <a href="https://oceancolor.gsfc.nasa.gov/gallery/">Ocean Color Gallery</a>
 	    	</p>
     </div>
 </section>
