--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -1,7 +1,8 @@
 <!-- Four -->
 <section id="four" class="wrapper style2 special">
     <div class="inner">
-	Banner photo from <a href="https://oceancolor.gsfc.nasa.gov/gallery/">Ocean Color Gallery</a>
+	Banner photo from <a href="https://oceancolor.gsfc.nasa.gov/gallery/" target="_blank">Ocean Color Gallery</a>
+	Website theme forked from <a href="geohackweek.github.io" target="_blank">geohackweek</a>
     </div>
 </section>
 
