--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -2,9 +2,9 @@
 <section id="three" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Section 3</h2>
-			<p>
-				text
+			<h2>New to data science? Or a seasoned practitioner?</h2>
+			<p>I like this "
+<a href="https://www.boozallen.com/content/dam/boozallen_site/sig/pdf/publications/2015-field-guide-to-data-science.pdf">field guide</a>" because it goes beyond data skills, and into the <i>science</i> part which is often overlooked.  
 			</p>
 		</header>
 	</div>
