--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,7 +6,7 @@
 		<ul class="actions">
 			<li><a href="/Page1.html" class="button special">Learning & Resources</a></li>
 			<li><a href="/Page2.html" class="button special">Blog</a></li>
-			<li><a href="/Page3.html" class="button special">Publications</a></li>
+			<li><a href="/Page3.html" class="button special">Academic</a></li>
 		</ul>
 	</div>
 	<a href="#one" class="more scrolly">Learn More</a>
