--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -4,7 +4,7 @@
 		<header class="major">
 			<h2>New to data science? Or a seasoned practitioner?</h2>
 			<p>I like this "
-<a href="https://www.boozallen.com/content/dam/boozallen_site/sig/pdf/publications/2015-field-guide-to-data-science.pdf" target=”_blank”>field guide</a>" because it goes beyond the technical know-how, and into the <i>science</i> and <i>understanding</i> which is often overlooked.  
+<a href="https://www.boozallen.com/content/dam/boozallen_site/sig/pdf/publications/2015-field-guide-to-data-science.pdf" target=”_blank”>field guide</a>" because it goes beyond the technical know-how, and into the <i>science</i> and <i>understanding</i> which are often overlooked.  
 			</p>
 		</header>
 	</div>
