--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,36 +17,22 @@
             <p>{{ page.description }}</p>
         </header>
         <section class="wrapper style5">
-            <div class="inner">
-                {% if page.team %}
-                    {% for row in page.team %}
-                    <div class="team-row">
-                        {% for person in row %}
-                        <div class="team-column">
-                            <figure class="team-card">
-                                <div class="profile-image">
-                                    <img src="{{ person.image_url }}" alt="{{ person.name }}" />
-                                </div>
-                                <figcaption>
-                                    <h3>{{ person.name }}</h3>
-                                    <h5>{{ person.title }}</h5>
-                                    <h5>{{ person.affiliate }}</h5>
-                                    <div class="icons">
-                                        {% if person.github_user %}
-                                        <a href="https://github.com/{{ person.github_user }}" class="icon fa-github"></a>
-                                        {% endif %}
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        {% endfor %}
-                    </div>
-                    {% endfor %}
-                {% else %}
-                    {{ content }}
-                {% endif %}
 
-            </div>
+		<div class="posts">
+		  {% for post in site.posts %}
+		    <article class="post">    
+
+		      <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
+
+		      <div class="entry">
+			{{ post.content | truncatewords:40}}
+		      </div>
+
+		      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+		    </article>
+		  {% endfor %}
+		</div>
+		
         </section>
     </article>
 
