--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<header class="major">
 			<h2>ABOUT ME</h2>
-			<p>As a data scientist, I'm excited about enabling data-driven decision making 
+			<p>I'm excited about enabling data-driven decision making 
 				for society's toughest challenges. This website is a collection of my 
 				favorite resources, as well as some of my thoughts on data 
 				and computing. Here you'll find general resources, and some specifically
