--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,11 @@
 						<ul>
 							{% for page in site.pages %} {% if page.layout == "default" %}
 							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-							{% endif %} {% endfor %} {% for page in site.pages %} {% if page.layout == "page" %}
+							{% endif %} {% endfor %} 
+							{% for page in site.pages %} {% if page.layout == "page" %}
+							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+							{% endif %} {% endfor %} 
+							{% for page in site.pages %} {% if page.layout == "post" %}
 							<li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 							{% endif %} {% endfor %}
 						</ul>
