--- a/_includes/section-four.html
+++ b/_includes/section-four.html
@@ -3,7 +3,7 @@
     <div class="inner">
 	Banner photo from <a href="https://oceancolor.gsfc.nasa.gov/gallery/" target="_blank">Ocean Color Gallery</a>
 	<br>Website theme forked from <a href="https://geohackweek.github.io/" target="_blank">geohackweek</a>
-	<br><a href="_posts/2020-04-26-fork-this-page.md" target="_blank">You can fork it too</a>
+	<br><a href="https://oceanspace.github.io/fork-this-page.html" target="_blank">You can fork it too</a>
     </div>
 </section>
 
