--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,8 +6,7 @@
 			<p>I'm excited about enabling data-driven decision making 
 				for society's toughest challenges. This website is a collection of my 
 				favorite resources, as well as some of my thoughts on data 
-				and computing. Here you'll find general resources, and some specifically
-				geared for applications in climate science and oceanography. 
+				and computing. 
 			</p>
 		</header>
 		<!--<ul class="icons major">-->
