--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<h2>{{ site.title }}</h2>
-		<p>{{ site.description }}</p>
+		<h2>{Grace Kim, Ph.D.}</h2>
+		<p>{data scientist}</p>
 		<ul class="actions">
 			<li><a href="/Page1.html" class="button special">Learning & Resources</a></li>
 			<li><a href="/Page2.html" class="button special">Blog</a></li>
